<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/textLeadMd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ui_image_bg"
            app:contentScrim="?attr/colorPrimary">


            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:contentDescription="@string/todo"
                android:foreground="@color/colorPrimary"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/tabor_logo_lg"
                    android:layout_width="83.4dp"
                    android:layout_height="76dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="139dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="138dp"
                    android:layout_marginBottom="117dp"
                    android:contentDescription="@string/todo"
                    android:foregroundGravity="left|right"
                    android:src="@drawable/tabor_logo_lg" />

                <TextView
                    android:id="@+id/allUsersTextView"
                    android:layout_width="197dp"
                    android:layout_height="21dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginStart="85dp"
                    android:layout_marginLeft="83dp"
                    android:layout_marginTop="112dp"
                    android:layout_marginEnd="81dp"
                    android:layout_marginRight="83dp"
                    android:layout_marginBottom="84dp"
                    android:gravity="bottom|fill_horizontal"
                    android:text="@string/all_users"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:theme="@style/textImportantLg" />
            </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/ovalForStatImageView"
                        android:layout_width="304dp"
                        android:layout_height="36dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="28dp"
                        android:layout_marginTop="157dp"
                        android:layout_marginEnd="28dp"
                        android:layout_marginRight="28dp"
                        android:background="@drawable/statistics_image"
                        android:contentDescription="@string/todo" />


                    <ImageView
                        android:id="@+id/twoPersonImageView3"
                        android:layout_width="66dp"
                        android:layout_height="38dp"
                        android:layout_alignStart="@+id/ovalForStatImageView"
                        android:layout_alignBottom="@+id/ovalForStatImageView"
                        android:layout_marginStart="-3dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="matrix"
                        app:srcCompat="@drawable/ui_avatars" />

                    <TextView
                        android:id="@+id/onlineUseresTextView"
                        android:layout_width="197dp"
                        android:layout_height="21dp"
                        android:layout_alignTop="@+id/ovalForStatImageView"
                        android:layout_alignEnd="@+id/ovalForStatImageView"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="31dp"
                        android:layout_toEndOf="@+id/twoPersonImageView3"
                        android:fontFamily="sans-serif"
                        android:gravity="bottom|center"
                        android:text="@string/online_users"
                        android:textColor="@color/colorBlackForStat"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="16dp"
                        android:layout_height="16dp"

                        android:layout_alignEnd="@+id/twoPersonImageView3"
                        android:layout_alignBottom="@+id/ovalForStatImageView"
                        android:layout_marginStart="47dp"
                        android:layout_marginTop="149dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="27dp"
                        android:background="@drawable/rings_online" />

                    <TextView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_alignTop="@+id/twoPersonImageView3"
                        android:layout_alignEnd="@+id/twoPersonImageView3"

                        android:layout_marginTop="-1dp"
                        android:layout_marginEnd="7dp"
                        android:layout_marginBottom="4dp"
                        android:foreground="@drawable/online_oval" />

                </RelativeLayout>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="328dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:background="@drawable/login_touch"
            android:gravity="center_vertical|start"
            android:hint="@string/e_mail_or_number_of_mobile"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="18sp"
            tools:targetApi="o" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginRight="16dp"
            android:gravity="bottom"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/password"
            android:textColorHint="@color/colorDark"
            app:hintAnimationEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_switch"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/login_touch"
                android:cursorVisible="true"
                android:gravity="center_vertical|start"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:textColorHint="@color/colorBlackForStat"
                android:textColorLink="@color/colorBlackForStat"
                android:textSize="18sp"
                android:visibility="visible">


            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/rememberCheckBox"
            style="@style/textLeadMd"
            android:layout_width="128dp"
            android:layout_height="24dp"
            android:layout_below="@+id/password_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:button="@drawable/checkbox_md_unchecked_default"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/remember"
            android:textColor="@color/colorDark"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            style="@style/textLeadMd"
            android:layout_width="140dp"
            android:layout_height="22dp"
            android:layout_below="@+id/password_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:gravity="bottom|end"
            android:text="@string/forget_password"
            android:textColor="@color/colorDark"
            android:textSize="16sp" />


        <Button
            android:id="@+id/enter"
            style="@style/textButtonLg"
            android:layout_width="328dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="202dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_enter_color"
            android:text="@string/enter"
            android:textColor="@color/window_background"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

        </LinearLayout>


    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"


            android:layout_alignBottom="@+id/helpLayout"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorBgCream"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstHereTextView"
                style="@style/textBodyMd"
                android:layout_width="122dp"
                android:layout_height="19dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="23dp"
                android:layout_toStartOf="@+id/registryButton"
                android:background="@android:color/transparent"
                android:gravity="bottom|center"
                android:text="@string/first_here"
                android:textColor="#d8000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/registryButton"
                android:layout_width="173dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/button_reg_color"
                android:text="@string/registry"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/helpLayout"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/colorBgBlue"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="288dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="33dp"
            android:gravity="bottom|fill_horizontal"
            android:text="@string/tabor_ru"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />
    </RelativeLayout>

    </RelativeLayout>
</LinearLayout>